<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/prompt_enterFirstName"
        android:ems="10"
        android:id="@+id/field_firstName"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/prompt_enterLastName"
        android:ems="10"
        android:id="@+id/field_LastName"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/field_firstName"
        android:layout_alignLeft="@+id/field_firstName"
        android:layout_alignStart="@+id/field_firstName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_applyVolunteer"
        android:id="@+id/button_volunteerSignup"
        android:layout_below="@+id/field_LastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header_volunteer"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />
</RelativeLayout>